<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="create_button">Create</string>
    <string name="email_text">Your eMail</string>
    <string name="email_text_info">eMail:</string>
    <string name="password">Password</string>
    <string name="yourPwd">Your Password</string>
    <string name="welcome_1">Welcome to Gabor</string>
    <string name="welcome_2">The Premium Shoe Store</string>
    <string name="button_instructions">Go to Instructions</string>
    <string name="instruction_label1">You can add new Shoes on the next page</string>
    <string name="instruction_label2">You can also show the details of the shoes</string>
    <string name="button_toShoes">Bring me to the shoes</string>
    <string name="Logout" />
    <string name="button_save">save</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_new_shoe_to_the_list">Add new shoe to the list</string>
    <string name="button_logout">Logout</string>
</resources>
